Agregando enlace a Facebook

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Git desde Cero</h1>
     <p>llevando el control con git</p>
+
+    <a href="www.facebook.com">facebook</a>
 </body>
 
 </html>
