agregando nuevo parrafo linea 16

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Git desde Cero Actualizando titulo</h1>
 
     <p>llevando el control con git</p>
+    <p>Agregando nueva linea</p>
 
     <a href="www.facebook.com">facebook</a>
 
